--- a/pom.xml
+++ b/pom.xml
@@ -1199,8 +1199,8 @@
         <taglibs.version>1.1.2</taglibs.version>
         <google.collect.wso2.version>1.0.0.wso2v2</google.collect.wso2.version>
         <junit.version>3.8.1</junit.version>
-        <carbon.kernel.version>4.4.6</carbon.kernel.version>
-        <carbon.commons.version>4.5.2</carbon.commons.version>
+        <carbon.kernel.version>4.4.7</carbon.kernel.version>
+        <carbon.commons.version>4.5.4</carbon.commons.version>
         <carbon.dashboards.version>1.0.18</carbon.dashboards.version>
         <carbon.p2.plugin.version>1.5.4</carbon.p2.plugin.version>
         <oauth2.client.version>1.0.0</oauth2.client.version>
@@ -1237,7 +1237,7 @@
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
         <testng.version>6.1.1</testng.version>
-        <carbon.deployment.version>4.6.2-SNAPSHOT</carbon.deployment.version>
+        <carbon.deployment.version>4.7.0</carbon.deployment.version>
         <carbon.registry.version>4.5.4</carbon.registry.version>
         <carbon.multitenancy.version>4.5.2</carbon.multitenancy.version>
         <jaggery.extensions.version>1.5.0</jaggery.extensions.version>
@@ -1268,7 +1268,7 @@
         <cipher-tool.version>1.0.0-wso2v3</cipher-tool.version>
         <jacoco.agent.version>0.7.5.201505241946</jacoco.agent.version>
         <project.scm.id>my-scm-server</project.scm.id>
-        <carbon.business-process.version>4.4.8</carbon.business-process.version>
+        <carbon.business-process.version>4.4.9</carbon.business-process.version>
         <carbon.analytics-common.version>5.0.12-beta2</carbon.analytics-common.version>
         <osgi.framework.imp.pkg.version.range>[1.7.0, 2.0.0)</osgi.framework.imp.pkg.version.range>
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
