--- a/pom.xml
+++ b/pom.xml
@@ -1208,7 +1208,7 @@
         <identity.inbound.provisioning.scim.version>5.1.1</identity.inbound.provisioning.scim.version>
         <identity.outbound.provisioning.scim.version>5.1.1</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.1</identity.tool.samlsso.validator.version>
-        <identity.data.publisher.authentication.version>5.1.1</identity.data.publisher.authentication.version>
+        <identity.data.publisher.authentication.version>5.1.2-SNAPSHOT</identity.data.publisher.authentication.version>
         <identity.carbon.auth.thrift.version>5.2.0</identity.carbon.auth.thrift.version>
         <identity.application.auth.oidc.version>5.1.1</identity.application.auth.oidc.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
