Adding HTTP security headers for dashboard.

--- a/modules/jaggery-apps/user-dashboard/dashboard/jaggery.conf
+++ b/modules/jaggery-apps/user-dashboard/dashboard/jaggery.conf
@@ -26,5 +26,19 @@
 
     ],
     "initScripts": ["app.js"],
-    "logLevel": "info"
+    "logLevel": "info",
+
+     "filters":[
+          {
+             "name":"HttpHeaderSecurityFilter",
+             "class":"org.apache.catalina.filters.HttpHeaderSecurityFilter",
+             "params" : [{"name" : "hstsEnabled", "value" : "false"}]
+          }
+       ],
+       "filterMappings":[
+          {
+             "name":"HttpHeaderSecurityFilter",
+             "url":"*"
+          }
+       ]
 }
