--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -168,6 +168,8 @@
                                         match="(?s)&lt;filter-mapping&gt;\s+&lt;filter-name&gt;HttpHeaderSecurityFilter&lt;/filter-name&gt;.*&lt;/filter-mapping&gt;"
                                         replace="${security-header-filter-mapping-is-token}"/>
 
+                                <!-- Update Owasp.CsrfGuard.properties file location to fix IBM JDK and DevStudio issue-->
+                                <replace file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/tomcat/carbon/WEB-INF/web.xml" token="/repository/conf/security/Owasp.CsrfGuard.Carbon.properties" value="repository/conf/security/Owasp.CsrfGuard.Carbon.properties"/>
 
                                 <!-- Update Owasp.CsrfGuard.properties file with ValidateWhenNoSessionExists to disable validation on requests made with no valid session -->
 
