--- a/pom.xml
+++ b/pom.xml
@@ -1208,7 +1208,7 @@
         <identity.outbound.provisioning.scim.version>5.1.2-SNAPSHOT</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.2-SNAPSHOT</identity.tool.samlsso.validator.version>
         <identity.data.publisher.authentication.version>5.1.2-SNAPSHOT</identity.data.publisher.authentication.version>
-        <identity.carbon.auth.thrift.version>5.2.1-SNAPSHOT</identity.carbon.auth.thrift.version>
+        <!--<identity.carbon.auth.thrift.version>5.2.1-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>
         <!--<identity.agent.entitlement.proxy.version>5.1.1</identity.agent.entitlement.proxy.version>-->
         <!--<identity.carbon.auth.signedjwt.version>5.1.1</identity.carbon.auth.signedjwt.version>-->
