--- a/modules/integration/tests-common/extensions/pom.xml
+++ b/modules/integration/tests-common/extensions/pom.xml
@@ -20,14 +20,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
+    <parent>
+        <groupId>org.wso2.is</groupId>
+        <artifactId>identity-integration-tests</artifactId>
+        <version>5.3.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
+    </parent>
+
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.wso2.carbon</groupId>
+    <name>Custom Attribute Finder</name>
     <artifactId>org.wso2.carbon.identity.custom.pip</artifactId>
     <version>4.2.2</version>
     <packaging>jar</packaging>
-    <name>Custom Attribute Finder</name>
-    <description>A custom wso2 products or solution</description>
-    <url>http://wso2.org</url>
 
     <dependencies>
         <dependency>
