--- a/pom.xml
+++ b/pom.xml
@@ -1173,10 +1173,10 @@
         <!--Identity Repo Versions-->
         <identity.local.auth.basicauth.version>5.1.2-SNAPSHOT</identity.local.auth.basicauth.version>
         <identity.outbound.auth.oidc.version>5.1.2-SNAPSHOT</identity.outbound.auth.oidc.version>
-        <identity.carbon.auth.saml2.version>5.1.2-SNAPSHOT</identity.carbon.auth.saml2.version>
+        <identity.carbon.auth.saml2.version>5.1.2</identity.carbon.auth.saml2.version>
         <identity.inbound.auth.saml.version>5.1.2-SNAPSHOT</identity.inbound.auth.saml.version>
-        <identity.outbound.auth.samlsso.version>5.1.2-SNAPSHOT</identity.outbound.auth.samlsso.version>
-        <identity.inbound.auth.oauth.version>5.1.2-SNAPSHOT</identity.inbound.auth.oauth.version>
+        <identity.outbound.auth.samlsso.version>5.1.2</identity.outbound.auth.samlsso.version>
+        <identity.inbound.auth.oauth.version>5.1.2</identity.inbound.auth.oauth.version>
         <identity.inbound.auth.openid.version>5.1.2-SNAPSHOT</identity.inbound.auth.openid.version>
         <identity.agent.sso.version>5.1.2-SNAPSHOT</identity.agent.sso.version>
         <identity.inbound.auth.sts.version>5.1.2-SNAPSHOT</identity.inbound.auth.sts.version>
