Added totp in IS_5.2.0

--- a/modules/connectors/pom.xml
+++ b/modules/connectors/pom.xml
@@ -148,6 +148,29 @@
                             </artifactItems>
                         </configuration>
                     </execution>
+                    <!-- Download totp authenticator jar from nexus and copy to the authenticatorCopied/jar folder-->
+                    <execution>
+                        <id>download_totp_jar</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
+                                    <artifactId>org.wso2.carbon.extension.identity.authenticator.totp.connector
+                                    </artifactId>
+                                    <version>${authenticator.totp.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${basedir}/target/authenticatorCopied/jar
+                                    </outputDirectory>
+                                    <includes>**/*.jar</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
                     <!-- Download eamilOTP  authenticator endpoint war from nexus and copy to the authenticatorCopied/war folder-->
                     <execution>
                         <id>download_emailotp_war</id>
@@ -198,16 +221,41 @@
                             </artifactItems>
                         </configuration>
                     </execution>
+                    <!-- Download TOTP endpoint war from nexus and copy to the authenticatorCopied/war folder-->
+                    <execution>
+                        <id>download_totp_war</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.wso2.carbon.extension.identity.authenticator</groupId>
+                                    <artifactId>
+                                        org.wso2.carbon.extension.identity.authenticator.totp.endpoint
+                                    </artifactId>
+                                    <version>${authenticator.totp.version}</version>
+                                    <type>war</type>
+                                    <overWrite>true</overWrite>
+                                    <destFileName>totpauthenticationendpoint.war</destFileName>
+                                    <outputDirectory>${basedir}/target/authenticatorCopied/war
+                                    </outputDirectory>
+                                    <includes>**/*.war</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
                 </executions>
             </plugin>
         </plugins>
     </build>
     <properties>
-        <authenticator.totp.version>1.0.2</authenticator.totp.version>
+        <authenticator.totp.version>2.0.0</authenticator.totp.version>
         <authenticator.office365.version>1.0.0</authenticator.office365.version>
         <authenticator.smsotp.version>2.0.1</authenticator.smsotp.version>
         <authenticator.emailotp.version>2.0.0</authenticator.emailotp.version>
-        <authenticator.twitter.version>1.0.4</authenticator.twitter.version>
+        <authenticator.twitter.version>1.0.5</authenticator.twitter.version>
         <authenticator.x509.version>2.0.0</authenticator.x509.version>
     </properties>
 </project>
