Update rest api auth features

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -766,6 +766,15 @@
                                 <featureArtifactDef>
                                     org.wso2.carbon.metrics:org.wso2.carbon.metrics.feature:${carbon.metrics.version}
                                 </featureArtifactDef>
+				
+				<!--Auth/Authz for Rest API-->
+				<featureArtifactDef>
+                                    org.wso2.carbon.identity:org.wso2.carbon.identity.auth.server.feature:${org.wso2.carbon.identity.auth.version}
+                                </featureArtifactDef>
+                                <featureArtifactDef>
+                                    org.wso2.carbon.identity:org.wso2.carbon.identity.authz.server.feature:${org.wso2.carbon.identity.auth.version}
+                                </featureArtifactDef>
+
                             </featureArtifacts>
                         </configuration>
                     </execution>
@@ -2212,6 +2221,18 @@
                                     <id>org.wso2.carbon.metrics.feature.group</id>
                                     <version>${carbon.metrics.version}</version>
                                 </feature>
+
+				<!-- Auth/Authz for Rest API  -->
+				<feature>
+                                    <id>org.wso2.carbon.identity.auth.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.authz.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
+
+
                             </features>
                         </configuration>
                     </execution>
@@ -2949,7 +2970,18 @@
                                     <id>org.wso2.carbon.metrics.feature.group</id>
                                     <version>${carbon.metrics.version}</version>
                                 </feature>
-                            
+                           
+				<!-- Auth/Authz for Rest API  -->
+                                <feature>
+                                    <id>org.wso2.carbon.identity.auth.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.authz.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
+	
+ 
                             </features>
                         </configuration>
                     </execution>
@@ -3380,6 +3412,15 @@
                                     <version>${carbon.metrics.version}</version>
                                 </feature>
 
+				<!-- Auth/Authz for Rest API  -->
+                                <feature>
+                                    <id>org.wso2.carbon.identity.auth.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.authz.server.feature.group</id>
+                                    <version>${org.wso2.carbon.identity.auth.version}</version>
+                                </feature>
 
                             </features>
                         </configuration>
@@ -3589,7 +3630,7 @@
                                     <id>org.wso2.carbon.metrics.feature.group</id>
                                     <version>${carbon.metrics.version}</version>
                                 </feature>
-
+				
                             </features>
                         </configuration>
                     </execution>
