Changes related to code refactoring

--- a/modules/p2-profile-gen/pom.xml
+++ b/modules/p2-profile-gen/pom.xml
@@ -196,10 +196,10 @@
                                     org.wso2.carbon.identity:org.wso2.carbon.identity.handler.event.account.lock.feature:${identity.event.handler.account.lock.version}
                                 </featureArtifactDef>
                                 <featureArtifactDef>
-                                    org.wso2.carbon.identity:org.wso2.carbon.email.mgt.feature:${identity.event.handler.email.version}
+                                    org.wso2.carbon.identity:org.wso2.carbon.email.mgt.feature:${identity.event.handler.notification.version}
                                 </featureArtifactDef>
                                 <featureArtifactDef>
-                                    org.wso2.carbon.identity:org.wso2.carbon.event.handler.email.server.feature:${identity.event.handler.email.version}
+                                    org.wso2.carbon.identity:org.wso2.carbon.event.handler.notification.server.feature:${identity.event.handler.notification.version}
                                 </featureArtifactDef>
                                 <featureArtifactDef>
                                     org.wso2.carbon.identity:org.wso2.carbon.identity.user.registration.feature:${carbon.identity.framework.version}
@@ -612,11 +612,11 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.email.mgt.feature.group</id>
-                                    <version>${identity.event.handler.email.version}</version>
+                                    <version>${identity.event.handler.notification.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.event.handler.email.server.feature.group</id>
-                                    <version>${identity.event.handler.email.version}</version>
+                                    <id>org.wso2.carbon.event.handler.notification.server.feature.group</id>
+                                    <version>${identity.event.handler.notification.version}</version>
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.identity.user.registration.feature.group</id>
@@ -1141,11 +1141,11 @@
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.email.mgt.feature.group</id>
-                                    <version>${identity.event.handler.email.version}</version>
+                                    <version>${identity.event.handler.notification.version}</version>
                                 </feature>
                                 <feature>
-                                    <id>org.wso2.carbon.event.handler.email.server.feature.group</id>
-                                    <version>${identity.event.handler.email.version}</version>
+                                    <id>org.wso2.carbon.event.handler.notification.server.feature.group</id>
+                                    <version>${identity.event.handler.notification.version}</version>
                                 </feature>
                                 <feature>
                                     <id>org.wso2.carbon.identity.user.registration.feature.group</id>
