--- a/pom.xml
+++ b/pom.xml
@@ -1130,6 +1130,11 @@
                 <scope>test</scope>
                 <version>${carbon.analytics-common.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.multitenancy</groupId>
+                <artifactId>org.wso2.carbon.tenant.mgt.stub</artifactId>
+                <version>${carbon.multitenancy.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
