--- a/pom.xml
+++ b/pom.xml
@@ -1215,7 +1215,7 @@
         <identity.inbound.auth.sts.version>5.1.1</identity.inbound.auth.sts.version>
         <identity.local.auth.fido.version>5.1.1</identity.local.auth.fido.version>
         <identity.outbound.auth.passive.sts.version>5.1.1</identity.outbound.auth.passive.sts.version>
-        <identity.outbound.auth.requestpath.basicauth.version>5.1.1
+        <identity.outbound.auth.requestpath.basicauth.version>5.1.2-SNAPSHOT
         </identity.outbound.auth.requestpath.basicauth.version>
         <identity.carbon.auth.mutual.ssl.version>5.1.1</identity.carbon.auth.mutual.ssl.version>
         <identity.notification.email.version>5.1.1</identity.notification.email.version>
@@ -1237,7 +1237,7 @@
         <identity.local.auth.iwa.version>5.2.0-SNAPSHOT</identity.local.auth.iwa.version>
         <identity.carbon.auth.iwa.version>5.1.1</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.1</identity.workflow.template.multisteps.version>
-        <identity.outbound.auth.requestpath.oauth.version>5.1.1</identity.outbound.auth.requestpath.oauth.version>
+        <identity.outbound.auth.requestpath.oauth.version>5.1.2-SNAPSHOT</identity.outbound.auth.requestpath.oauth.version>
         <identity.inbound.provisioning.scim.version>5.1.1</identity.inbound.provisioning.scim.version>
         <identity.outbound.provisioning.scim.version>5.1.1</identity.outbound.provisioning.scim.version>
         <identity.tool.samlsso.validator.version>5.1.1</identity.tool.samlsso.validator.version>
