--- a/pom.xml
+++ b/pom.xml
@@ -1222,7 +1222,7 @@
         <!--<identity.userstore.cassandra.version>5.1.1</identity.userstore.cassandra.version>-->
         <!--<identity.agent-entitlement-filter.version>5.1.1</identity.agent-entitlement-filter.version>-->
         <!--Identity Repo Versions End-->
-        
+
         <product.identity.version>5.2.0-SNAPSHOT</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
@@ -1237,7 +1237,7 @@
         <opensaml2.wso2.version>2.6.4.wso2v3</opensaml2.wso2.version>
         <joda.version>2.8.2</joda.version>
         <joda.wso2.version>2.8.2.wso2v1</joda.wso2.version>
-        <wss4j.wso2.version>1.5.11.wso2v14</wss4j.wso2.version>
+        <wss4j.wso2.version>1.5.11.wso2v15-SNAPSHOT</wss4j.wso2.version>
         <openws.version>1.5.4</openws.version>
         <charon.version>2.0.6</charon.version>
         <xalan.version>2.7.1</xalan.version>
