--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>modules/features</module>
         <module>modules/p2-profile-gen</module>
         <module>modules/connectors</module>
+        <module>modules/social-authenticators</module>
         <module>modules/distribution</module>
         <module>modules/styles</module>
         <module>modules/samples</module>
@@ -1203,10 +1204,6 @@
         <identity.userstore.remote.version>5.1.2-SNAPSHOT</identity.userstore.remote.version>
         <identity.workflow.impl.bps.version>5.1.2-SNAPSHOT</identity.workflow.impl.bps.version>
         <identity.outbound.auth.openid.version>5.1.2-SNAPSHOT</identity.outbound.auth.openid.version>
-        <identity.outbound.auth.facebook.version>5.1.2-SNAPSHOT</identity.outbound.auth.facebook.version>
-        <identity.outbound.auth.google.version>5.1.2-SNAPSHOT</identity.outbound.auth.google.version>
-        <identity.outbound.auth.windows.live.version>5.1.2-SNAPSHOT</identity.outbound.auth.windows.live.version>
-        <identity.outbound.auth.yahoo.version>5.1.2-SNAPSHOT</identity.outbound.auth.yahoo.version>
         <identity.local.auth.iwa.version>5.1.2-SNAPSHOT</identity.local.auth.iwa.version>
         <identity.carbon.auth.iwa.version>5.1.2-SNAPSHOT</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.2-SNAPSHOT</identity.workflow.template.multisteps.version>
@@ -1363,7 +1360,7 @@
                 <checksumPolicy>ignore</checksumPolicy>
             </releases>
         </repository>
-
+        
         <repository>
             <id>wso2.snapshots</id>
             <name>WSO2 Snapshot Repository</name>
