--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>modules/features</module>
         <module>modules/p2-profile-gen</module>
         <module>modules/connectors</module>
+        <module>modules/authenticators</module>
         <module>modules/social-authenticators</module>
         <module>modules/distribution</module>
         <module>modules/styles</module>
@@ -1206,7 +1207,6 @@
 
         <!--Identity Repo Versions-->
         <identity.local.auth.basicauth.version>5.2.0-SNAPSHOT</identity.local.auth.basicauth.version>
-        <identity.outbound.auth.oidc.version>5.1.1</identity.outbound.auth.oidc.version>
         <identity.carbon.auth.saml2.version>5.1.3</identity.carbon.auth.saml2.version>
         <identity.inbound.auth.saml.version>5.1.1</identity.inbound.auth.saml.version>
         <identity.outbound.auth.samlsso.version>5.1.2</identity.outbound.auth.samlsso.version>
@@ -1215,7 +1215,6 @@
         <identity.agent.sso.version>5.1.1</identity.agent.sso.version>
         <identity.inbound.auth.sts.version>5.1.1</identity.inbound.auth.sts.version>
         <identity.local.auth.fido.version>5.1.1</identity.local.auth.fido.version>
-        <identity.outbound.auth.passive.sts.version>5.1.1</identity.outbound.auth.passive.sts.version>
         <identity.outbound.auth.requestpath.basicauth.version>5.1.2-SNAPSHOT
         </identity.outbound.auth.requestpath.basicauth.version>
         <identity.carbon.auth.mutual.ssl.version>5.1.1</identity.carbon.auth.mutual.ssl.version>
@@ -1230,7 +1229,6 @@
         <identity.userstore.ldap.version>5.1.1</identity.userstore.ldap.version>
         <identity.userstore.remote.version>5.1.1</identity.userstore.remote.version>
         <identity.workflow.impl.bps.version>5.1.2-SNAPSHOT</identity.workflow.impl.bps.version>
-        <identity.outbound.auth.openid.version>5.1.1</identity.outbound.auth.openid.version>
         <identity.local.auth.iwa.version>5.2.0-SNAPSHOT</identity.local.auth.iwa.version>
         <identity.carbon.auth.iwa.version>5.1.1</identity.carbon.auth.iwa.version>
         <identity.workflow.template.multisteps.version>5.1.1</identity.workflow.template.multisteps.version>
