--- a/modules/authenticators/pom.xml
+++ b/modules/authenticators/pom.xml
@@ -81,6 +81,30 @@
                     </execution>
                     <!-- Download OpenID jar from nexus and copy to the  authenticatoroutbound/jar folder-->
                     <execution>
+                        <id>download_samlauthenticator_jar</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>org.wso2.carbon.identity</groupId>
+                                    <artifactId>
+                                        org.wso2.carbon.identity.application.authenticator.samlsso
+                                    </artifactId>
+                                    <version>${identity.outbound.auth.samlsso.version}</version>
+                                    <type>jar</type>
+                                    <overWrite>true</overWrite>
+                                    <outputDirectory>${basedir}/target/authenticatoroutboundCopied/jar
+                                    </outputDirectory>
+                                    <includes>**/*.jar</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                    <!-- Download OpenID jar from nexus and copy to the  authenticatoroutbound/jar folder-->
+                    <execution>
                         <id>download_openid_jar</id>
                         <phase>compile</phase>
                         <goals>
@@ -103,7 +127,6 @@
                             </artifactItems>
                         </configuration>
                     </execution>
-
                 </executions>
             </plugin>
         </plugins>
@@ -112,5 +135,6 @@
         <identity.outbound.auth.oidc.version>5.1.2-SNAPSHOT</identity.outbound.auth.oidc.version>
         <identity.outbound.auth.passive.sts.version>5.1.2-SNAPSHOT</identity.outbound.auth.passive.sts.version>
         <identity.outbound.auth.openid.version>5.1.2-SNAPSHOT</identity.outbound.auth.openid.version>
+        <identity.outbound.auth.samlsso.version>5.1.3-SNAPSHOT</identity.outbound.auth.samlsso.version>
     </properties>
 </project>
